--- a/style.css
+++ b/style.css
@@ -13,11 +13,18 @@ container {
 
 h1 {
   margin-top: 0;
+  color: rgba(27, 122, 84, 0.4);
   padding: 0 7% 0 0;
   text-align: right;
-  border-bottom: dashed #747474 2px;
+  border-bottom: dashed #5f5c5c 2px;
   font-variant: all-petite-caps;
-  font-size: 24px;
+  font-size: 32px;
+  text-shadow: 1px 1px white, 1px 1.5px #D7CC88;
+  height: 60px;
+  border: 10px solid transparent;
+  border-image: linear-gradient(to right, transparent 0%, #2EE59D 200%);
+  border-image-slice: 1;
+ 
 }
 
 .container {
@@ -33,11 +40,11 @@ h1 {
 input[type=text] {
   margin: auto 3px;
   padding: 4px;
-  border: 1px solid #88abff;
+  border: 1px solid #2EE59D;
   border-radius: 2px;
   font-family: monospace;
   letter-spacing: 0.02rem;
-  outline-color: blue;
+  outline-color: #2EE59D;
 }
 
 button {
@@ -84,6 +91,7 @@ list-style: none;
 font: 14px "Trebuchet MS", "Lucida Sans";
 padding: 0;
 text-shadow: 0 1px 0 rgba(255,255,255,.1);
+height: 50px;
 }
 
 .rectangle a {
@@ -129,11 +137,6 @@ transition: all .3s ease-out;
 .rectangle a:hover:after {
 left: -.5em;
 border-left-color: #2EE59D;
-}
-
-.text-shadow-1 {
-color: white;
-text-shadow: 1px 1px #732372, 1px -1px #732372, -1px 1px #732372, -1px -1px #732372, 3px 3px 6px rgba(0,0,0,.5);
 }
 
 }
