--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body {
 
 container {
   display: flex;
-  justify-content: center; 
+  justify-content: center;
+  white-space: nowrap; 
 }
 
 h1 {
@@ -17,15 +18,30 @@ h1 {
   padding: 0 7% 0 0;
   text-align: right;
   border-bottom: dashed #5f5c5c 2px;
-  font-variant: all-petite-caps;
-  font-size: 48px;
+  font-size: 32px;
   text-shadow: 1px 1px white, 1px 1.5px #D7CC88;
   height: 60px;
   border: 10px solid transparent;
   border-image: linear-gradient(to right, transparent 0%, #2EE59D 200%);
   border-image-slice: 1;
+  letter-spacing: 2px;
  
 }
+
+.outer {
+  text-align: center;
+  border: 1px solid blue;
+}
+
+h2 {
+  margin-top: 0;
+  text-align: center;
+  font-size: 18px;
+  display: inline-block;
+  margin: auto 3px;
+  width: 450px;
+
+}  
 
 .container {
   text-align: center;
@@ -88,7 +104,6 @@ canvas {
 .rectangle {
 counter-reset: li; 
 list-style: none; 
-font: 14px "Trebuchet MS", "Lucida Sans";
 padding: 0;
 text-shadow: 0 1px 0 rgba(255,255,255,.1);
 height: 50px;
@@ -104,7 +119,7 @@ color: #444;
 text-decoration: none;
 transition: all .3s ease-out;
 border-radius: .5em;
-width: 350px;
+width: 400px;
 }
 
 .rectangle a:hover {background: #DCDDE1;}   
