--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ h2 {
   font-size: 18px;
   display: inline-block;
   margin: auto 3px;
-  width: 650px;
+  width: 25em;
 
 }  
 
@@ -91,8 +91,8 @@ button:hover {
 }
 
 canvas {
-  width: inherit;
-  max-width: inherit;
+  width: 90%;
+  margin: 10px;
     border: double 4px #2EE59D;
 }
 
